--- a/models.config
+++ b/models.config
@@ -14,4 +14,10 @@ model_config_list {
         base_path: "/models/LSTMSentiment/"
         model_platform: "tensorflow"
     }
+    config: {
+        name: "SpeechDigits",
+        base_path: "/models/SpeechDigits/"
+        model_platform: "tensorflow"
+    }
+
 }
